--- a/index.html
+++ b/index.html
@@ -5,15 +5,28 @@
     <title>Title</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="X1">
-<a href="#1" class="buttonOne">Открыть</a>
-<a href="#x1" class="background" id="1"></a>
+<body >
+<a  class="buttonOne">Открыть</a>
+<a  class="background"></a>
 <div class="block">
     Идея триангуляции заключается в том, чтобы разместить на местности цепочку стыкующихся треугольников. Если измерены<br>
     два угла треугольника и одна сторона (базис), то, последовательно решая треугольники, можно отыскать все их элементы<br>
     (все стороны и все углы). При этом, для достижения наивысшей точности, вершины треугольников следует выбирать на<br>
     местности с особой тщательностью<br>
 </div>
+<script type='text/javascript'>
+    document.querySelector('.buttonOne').addEventListener('click', function () {
+        document.getElementsByClassName('block')[0].style.opacity = "1";
+        document.getElementsByClassName('block')[0].style.visibility = "visible";
+        document.getElementsByClassName('background')[0].style.display = "block";
 
+    });
+
+    document.querySelector('.background').addEventListener('click', function () {
+        document.getElementsByClassName('block')[0].style.opacity = "0";
+        document.getElementsByClassName('block')[0].style.visibility = "hidden";
+        document.getElementsByClassName('background')[0].style.display = "none";
+    });
+</script>
 </body>
 </html>
