--- a/index.html
+++ b/index.html
@@ -7,26 +7,15 @@
 </head>
 <body >
 <a  class="buttonOne">Открыть</a>
-<a  class="background"></a>
+<div class="capsule">
+<div  class="background"></div>
 <div class="block">
     Идея триангуляции заключается в том, чтобы разместить на местности цепочку стыкующихся треугольников. Если измерены<br>
     два угла треугольника и одна сторона (базис), то, последовательно решая треугольники, можно отыскать все их элементы<br>
     (все стороны и все углы). При этом, для достижения наивысшей точности, вершины треугольников следует выбирать на<br>
     местности с особой тщательностью<br>
 </div>
-<script type='text/javascript'>
-    document.querySelector('.buttonOne').addEventListener('click', function () {
-        document.getElementsByClassName('block')[0].style.opacity = "1";
-        document.getElementsByClassName('block')[0].style.visibility = "visible";
-        document.getElementsByClassName('background')[0].style.display = "block";
-
-    });
-
-    document.querySelector('.background').addEventListener('click', function () {
-        document.getElementsByClassName('block')[0].style.opacity = "0";
-        document.getElementsByClassName('block')[0].style.visibility = "hidden";
-        document.getElementsByClassName('background')[0].style.display = "none";
-    });
-</script>
+</div>
+<script src="js/index.js"></script>
 </body>
 </html>
